# yt-clips

./: .ai.env  .gitattributes  .gitignore  .graphifyignore  .html  AGAINST.md  AGENTS.md  ARCHITECTURE.md  BLACK_PANEL_FIX_SUMMARY.md  CLIPPING_ISSUES_REPORT.md  Colab.ipynb  Colab.md  Colab_Bridge.ipynb  Colab_Setup.ipynb  FIX_PLAN.md  GEMINI.md  Kaggle.ipynb  LOCKED_ARCHITECTURE.md  MULTI_FRAME_DROP_IMPLEMENTATION.md  QUALITY_IMPROVEMENTS_PHASE2.md  QUALITY_IMPROVEMENTS_SUMMARY.md  README.md  SEO_CRICBUZZ_INTEGRATION_REPORT.md  SEO_FLOW.md  V2_IMPLEMENTATION_SUMMARY.md  V31_MISSING_ITEMS.md  _fix_encoding.py  analytics.py  analyze_faces.py  architecture-appearence-field.md  async_scraper.py  automate.sh  automation.sh  benchmark_models.py  bridge.py  channel_watcher.py  clean_drive.py  clip_and_sync.py  colab_setup.py  colab_tunnel.py  (+78 more)
.antigravitycli/: 237d7cd4-48e1-452e-9179-0275c236cbb8.json
automation/: AGENTS.md  README.md  __init__.py  _cache.py  batch.py  batch_cli.py  cli.py  colab.py  config.py  dashboard.py  env.py  kaggle.py  memory.py  orchestrator.py  scheduling.py  scoring.py  seo_only.py  seo_only_cli.py  transcript.py  tunnel.py  watcher.py  worker.py
docs/: IMPROVEMENT_PLAN.md
face_os/: AGENTS.md  ARCHITECTURE_V2.md  AUDIT_REPORT.md  FULL_REFERENCE.md  STATE.md  STRANDED_MODULES.md  __init__.py  ab_validation.py  accept_gate.py  appearance_field.py  arch.md  architectural_completeness.py  audit.py  benchmark_suite.py  canonical_map.py  colab_client.py  colab_drive.py  colab_notebook.py  colab_server.py  compositor.py  config.py  crop_objective.py  (+40 more)
(+240 files in other folders)
